Claimed PIDs page now loads from backend

--- a/docs/styleBC.css
+++ b/docs/styleBC.css
@@ -35,3 +35,8 @@ h1,h2,h3,h4,h5,h6{
 .indent-1 {
     text-indent: 40px;
 }
+
+#claimed_pids_field {
+    font-weight: bold;
+    font-size: 150%;
+}
